Introduce the concept of Evolution Strategy
An Evolution Strategy defines how the next generation is created based on the offsprings and the current generation.

Fix #19