@@ -2,7 +2,9 @@ package net.bmahe.genetics4j.moo.nsga2.impl;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import java.util.Collections;
 import java.util.List;
@@ -11,6 +13,7 @@ import java.util.Random;
 import org.junit.Test;
 
 import net.bmahe.genetics4j.core.Genotype;
+import net.bmahe.genetics4j.core.Population;
 import net.bmahe.genetics4j.core.chromosomes.factory.BitChromosomeFactory;
 import net.bmahe.genetics4j.core.spec.EAConfiguration;
 import net.bmahe.genetics4j.core.spec.chromosome.ImmutableBitChromosomeSpec;
@@ -23,7 +26,6 @@ import net.bmahe.genetics4j.moo.nsga2.spec.TournamentNSGA2Selection;
 public class TournamentNSGA2SelectorTest {
 	private final TournamentNSGA2Selection<FitnessVector<Integer>> SIMPLE_TOURNAMENT_NSGA2_SELECTION_SPEC = ImmutableTournamentNSGA2Selection
 			.<FitnessVector<Integer>>of(2,
-					(a, b) -> a.compareTo(b),
 					(m) -> (a, b) -> Double.compare(a.get(m), b.get(m)),
 					(a, b, m) -> b.get(m) - a.get(m),
 					3);
@@ -31,7 +33,6 @@ public class TournamentNSGA2SelectorTest {
 	private final EAConfiguration<FitnessVector<Integer>> SIMPLE_MAXIMIZING_EA_CONFIGURATION = new EAConfiguration.Builder<FitnessVector<Integer>>()
 			.addChromosomeSpecs(ImmutableBitChromosomeSpec.of(3))
 			.parentSelectionPolicy(SIMPLE_TOURNAMENT_NSGA2_SELECTION_SPEC)
-			.survivorSelectionPolicy(SIMPLE_TOURNAMENT_NSGA2_SELECTION_SPEC)
 			.combinationPolicy(SinglePointCrossover.build())
 			.fitness((genoType) -> new FitnessVector<>(1, genoType.hashCode() / Integer.MAX_VALUE * 10))
 			.termination(Terminations.ofMaxGeneration(100))
@@ -58,7 +59,7 @@ public class TournamentNSGA2SelectorTest {
 		final TournamentNSGA2Selection<Integer> nsga2Selection = mock(TournamentNSGA2Selection.class);
 
 		final TournamentNSGA2Selector<Integer> nsga2Selector = new TournamentNSGA2Selector<>(random, nsga2Selection);
-		nsga2Selector.select(null, 4, new Genotype[] {}, Collections.emptyList());
+		nsga2Selector.select(null, 4, Collections.emptyList(), Collections.emptyList());
 	}
 
 	@Test(expected = NullPointerException.class)
@@ -76,7 +77,7 @@ public class TournamentNSGA2SelectorTest {
 		final TournamentNSGA2Selection<Integer> nsga2Selection = mock(TournamentNSGA2Selection.class);
 
 		final TournamentNSGA2Selector<Integer> nsga2Selector = new TournamentNSGA2Selector<>(random, nsga2Selection);
-		nsga2Selector.select(mock(EAConfiguration.class), 4, new Genotype[] {}, null);
+		nsga2Selector.select(mock(EAConfiguration.class), 4, Collections.emptyList(), null);
 	}
 
 	@Test(expected = IllegalArgumentException.class)
@@ -85,7 +86,7 @@ public class TournamentNSGA2SelectorTest {
 		final TournamentNSGA2Selection<Integer> nsga2Selection = mock(TournamentNSGA2Selection.class);
 
 		final TournamentNSGA2Selector<Integer> nsga2Selector = new TournamentNSGA2Selector<>(random, nsga2Selection);
-		nsga2Selector.select(mock(EAConfiguration.class), 0, new Genotype[] {}, Collections.emptyList());
+		nsga2Selector.select(mock(EAConfiguration.class), 0, Collections.emptyList(), Collections.emptyList());
 	}
 
 	@Test(expected = IllegalArgumentException.class)
@@ -94,7 +95,7 @@ public class TournamentNSGA2SelectorTest {
 		final TournamentNSGA2Selection<Integer> nsga2Selection = mock(TournamentNSGA2Selection.class);
 
 		final TournamentNSGA2Selector<Integer> nsga2Selector = new TournamentNSGA2Selector<>(random, nsga2Selection);
-		nsga2Selector.select(mock(EAConfiguration.class), 1, new Genotype[] {}, List.of(4));
+		nsga2Selector.select(mock(EAConfiguration.class), 1, Collections.emptyList(), List.of(4));
 	}
 
 	@Test
@@ -107,30 +108,31 @@ public class TournamentNSGA2SelectorTest {
 
 		final BitChromosomeFactory chromosomeFactory = new BitChromosomeFactory(random);
 
-		final Genotype[] population = {
+		final List<Genotype> population = List.of(
 				new Genotype(chromosomeFactory.generate(SIMPLE_MAXIMIZING_EA_CONFIGURATION.getChromosomeSpec(0))),
 				new Genotype(chromosomeFactory.generate(SIMPLE_MAXIMIZING_EA_CONFIGURATION.getChromosomeSpec(0))),
 				new Genotype(chromosomeFactory.generate(SIMPLE_MAXIMIZING_EA_CONFIGURATION.getChromosomeSpec(0))),
 				new Genotype(chromosomeFactory.generate(SIMPLE_MAXIMIZING_EA_CONFIGURATION.getChromosomeSpec(0))),
-				new Genotype(chromosomeFactory.generate(SIMPLE_MAXIMIZING_EA_CONFIGURATION.getChromosomeSpec(0))) };
+				new Genotype(chromosomeFactory.generate(SIMPLE_MAXIMIZING_EA_CONFIGURATION.getChromosomeSpec(0))));
 		final List<FitnessVector<Integer>> fitnessScore = List.of(new FitnessVector<>(1, 2),
 				new FitnessVector<>(12, 12),
 				new FitnessVector<>(-5, -5),
 				new FitnessVector<>(-10, -10),
 				new FitnessVector<>(2, 1));
 
-		final List<Genotype> selectedTopOne = nsga2Selector
+		final Population<FitnessVector<Integer>> selectedTopOne = nsga2Selector
 				.select(SIMPLE_MAXIMIZING_EA_CONFIGURATION, 3, population, fitnessScore);
 		assertNotNull(selectedTopOne);
 		assertEquals(3, selectedTopOne.size());
 
-		final List<Genotype> selectedTopFromNotSoGreat = nsga2Selector.select(SIMPLE_MAXIMIZING_EA_CONFIGURATION,
+		final Population<FitnessVector<Integer>> selectedTopFromNotSoGreat = nsga2Selector.select(
+				SIMPLE_MAXIMIZING_EA_CONFIGURATION,
 				2,
-				new Genotype[] { population[2], population[3] },
+				List.of(population.get(2), population.get(3)),
 				List.of(fitnessScore.get(2), fitnessScore.get(3)));
 		assertNotNull(selectedTopFromNotSoGreat);
 		assertEquals(2, selectedTopFromNotSoGreat.size());
-		assertEquals(population[2], selectedTopFromNotSoGreat.get(0));
-		assertEquals(population[3], selectedTopFromNotSoGreat.get(1));
+		assertEquals(population.get(2), selectedTopFromNotSoGreat.getGenotype(0));
+		assertEquals(population.get(3), selectedTopFromNotSoGreat.getGenotype(1));
 	}
 }
